--- a/extensions/cli/.npmignore
+++ b/extensions/cli/.npmignore
@@ -6,7 +6,12 @@ test
 .releaserc.json
 AGENTS.md
 vitest.config.ts
+vitest.e2e.config.ts
+vitest.setup.ts
 tsconfig.json
 tsconfig.build.json
 TESTING_STRATEGY.md
 .env.example
+package-lock.json
+eslint.config.js
+spec/
