fix: use local config-yaml

--- a/extensions/cli/package.json
+++ b/extensions/cli/package.json
@@ -39,7 +39,7 @@
   },
   "homepage": "https://continue.dev",
   "dependencies": {
-    "@continuedev/config-yaml": "^1.0.96",
+    "@continuedev/config-yaml": "file:../../packages/config-yaml",
     "@continuedev/openai-adapters": "file:../../packages/openai-adapters",
     "@continuedev/sdk": "^0.0.13",
     "@modelcontextprotocol/sdk": "^1.17.2",
