--- a/.github/workflows/cli-pr-checks.yml
+++ b/.github/workflows/cli-pr-checks.yml
@@ -25,10 +25,13 @@ jobs:
           cache: "npm"
           cache-dependency-path: extensions/cli/package-lock.json
 
-      - name: Install core dependencies
-        run: |
-          cd core
-          npm i
+      - name: Setup packages
+        uses: ./.github/actions/setup-packages
+      - name: Setup core component
+        uses: ./.github/actions/setup-component
+        with:
+          component: core
+          include-root: true
 
       - name: Install dependencies
         run: |
@@ -58,10 +61,13 @@ jobs:
           cache: "npm"
           cache-dependency-path: extensions/cli/package-lock.json
 
-      - name: Install core dependencies
-        run: |
-          cd core
-          npm i
+      - name: Setup packages
+        uses: ./.github/actions/setup-packages
+      - name: Setup core component
+        uses: ./.github/actions/setup-component
+        with:
+          component: core
+          include-root: true
 
       - name: Install dependencies
         run: |
