--- a/.github/workflows/cli-pr-checks.yml
+++ b/.github/workflows/cli-pr-checks.yml
@@ -63,6 +63,11 @@ jobs:
           cd extensions/cli
           npm run build
 
+      - name: Run smoke tests
+        run: |
+          cd extensions/cli
+          npm run test:smoke
+
       # e2e tests are failing on Windows specifically - likely due to stdout flush issues
       - name: Run tests
         if: matrix.os != 'windows-latest'
