ci: validate aliases

--- a/extensions/cli/package.json
+++ b/extensions/cli/package.json
@@ -16,8 +16,9 @@
     "test:smoke": "node smoke-test.mjs",
     "build:tsc": "tsc -p tsconfig.build.json",
     "build:local-deps": "cd ../../packages/config-types && npm run build && cd ../config-yaml && npm run build && cd ../openai-adapters && npm run build",
+    "build:validate": "node validate-aliases.mjs",
     "build:bundle": "node build.mjs",
-    "build": "npm run build:local-deps && npm run build:bundle",
+    "build": "npm run build:local-deps && npm run build:validate && npm run build:bundle",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "repomix:sdk": "npx repomix node_modules/@continuedev/sdk --ignore **/api,cli-repomix.xml -o sdk-repomix.xml",
