--- a/extensions/cli/package.json
+++ b/extensions/cli/package.json
@@ -110,6 +110,7 @@
     "@types/readline-sync": "^1.4.8",
     "@types/shell-quote": "^1.7.5",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "@vitest/ui": "^3.2.4",
