--- a/.github/workflows/cli-pr-checks.yml
+++ b/.github/workflows/cli-pr-checks.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd extensions/cli
-          npm ci
+          npm ci --include=optional
 
       - name: Run linting
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd extensions/cli
-          npm ci
+          npm ci --include=optional
 
       - name: Build
         run: |
