--- a/.github/workflows/cli-pr-checks.yml
+++ b/.github/workflows/cli-pr-checks.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
-          cache-dependency-path: extensions/cli/package-lock.json
+          # cache-dependency-path: extensions/cli/package-lock.json
 
       - name: Setup packages
         uses: ./.github/actions/setup-packages
