--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -30,7 +30,16 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           always-auth: true
 
-      - name: Install dependencies
+      - name: Setup packages
+        uses: ./.github/actions/setup-packages
+
+      - name: Setup core component
+        uses: ./.github/actions/setup-component
+        with:
+          component: core
+          include-root: true
+
+      - name: Install CLI dependencies
         working-directory: extensions/cli
         run: npm ci
         env:
