--- a/.github/workflows/stable-release.yml
+++ b/.github/workflows/stable-release.yml
@@ -141,6 +141,17 @@ jobs:
           # Update version to stable (remove beta suffix)
           npm version ${{ steps.find_beta.outputs.stable_version }} --no-git-tag-version
 
+      - name: Setup packages (for direct stable release)
+        if: ${{ inputs.release_type == 'direct-stable' }}
+        uses: ./.github/actions/setup-packages
+
+      - name: Setup core component (for direct stable release)
+        if: ${{ inputs.release_type == 'direct-stable' }}
+        uses: ./.github/actions/setup-component
+        with:
+          component: core
+          include-root: true
+
       - name: Prepare package for direct stable release
         if: ${{ inputs.release_type == 'direct-stable' }}
         working-directory: extensions/cli
