--- a/extensions/cli/package.json
+++ b/extensions/cli/package.json
@@ -18,7 +18,7 @@
     "build:local-deps": "cd ../../packages/config-types && npm i && npm run build && cd ../fetch && npm i && npm run build && cd ../llm-info && npm i && npm run build && cd ../config-yaml && npm i && npm run build && cd ../openai-adapters && npm i && npm run build && cd ../../core && npm i && cd ../extensions/cli && npm i",
     "build:validate": "node validate-aliases.mjs",
     "build:bundle": "node build.mjs",
-    "build": "npm run build:local-deps && npm run build:validate && npm run build:bundle",
+    "build": "npm run build:validate && npm run build:bundle",
     "start": "node dist/cn.js",
     "dev": "tsx src/index.ts",
     "repomix:sdk": "npx repomix node_modules/@continuedev/sdk --ignore **/api,cli-repomix.xml -o sdk-repomix.xml",
