--- a/.github/actions/run-jetbrains-tests/action.yml
+++ b/.github/actions/run-jetbrains-tests/action.yml
@@ -135,14 +135,22 @@ runs:
       shell: bash
       run: |
         cd extensions/intellij
-        mv video build/reports
+        if [ -d "video" ]; then
+          mv video build/reports
+        else
+          echo "No video directory found to move"
+        fi
 
     - name: Copy logs
       if: ${{ failure() }}
       shell: bash
       run: |
         cd extensions/intellij
-        mv build/idea-sandbox/system/log/ build/reports
+        if [ -d "build/idea-sandbox/system/log/" ]; then
+          mv build/idea-sandbox/system/log/ build/reports
+        else
+          echo "No log directory found to copy"
+        fi
 
     - name: Save fails report
       if: ${{ failure() }}
