fix: pin to ffmpeg version 7.1

--- a/.github/actions/run-jetbrains-tests/action.yml
+++ b/.github/actions/run-jetbrains-tests/action.yml
@@ -44,6 +44,7 @@ runs:
     - name: Setup FFmpeg
       uses: AnimMouse/setup-ffmpeg@v1
       with:
+        version: 7.1
         token: ${{ inputs.github-token }}
 
     - name: Setup Gradle
