ci: log when tests are re-run

--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -11,6 +11,14 @@ on:
       - main
 
 jobs:
+  track-rerun:
+    runs-on: ubuntu-latest
+    if: github.run_attempt > 1
+    steps:
+      - uses: actions/checkout@v5
+      - name: Track workflow rerun
+        uses: ./.github/actions/track-rerun
+
   prettier-check:
     runs-on: ubuntu-latest
     steps:
