--- a/.github/workflows/cli-pr-checks.yml
+++ b/.github/workflows/cli-pr-checks.yml
@@ -12,6 +12,14 @@ permissions:
   issues: write
 
 jobs:
+  track-rerun:
+    runs-on: ubuntu-latest
+    if: github.run_attempt > 1
+    steps:
+      - uses: actions/checkout@v4
+      - name: Track workflow rerun
+        uses: ./.github/actions/track-rerun
+
   lint:
     runs-on: ubuntu-latest
     steps:
