--- a/actions/general-review/action.yml
+++ b/actions/general-review/action.yml
@@ -12,6 +12,9 @@ inputs:
   continue-config:
     description: 'Config path to use (e.g., "myorg/review-bot")'
     required: true
+  github-token:
+    description: 'GitHub token for API access'
+    required: true
 
 runs:
   using: 'composite'
@@ -74,7 +77,7 @@ runs:
       if: env.SHOULD_RUN == 'true'
       shell: bash
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ inputs.github-token }}
       run: |
         # Get PR number based on event type
         if [ "${{ github.event_name }}" = "pull_request" ]; then
@@ -186,6 +189,7 @@ runs:
       if: env.SHOULD_RUN == 'true' && always()
       uses: actions/github-script@v7
       with:
+        github-token: ${{ inputs.github-token }}
         script: |
           const fs = require('fs');
 
