feat: add user-friendly way to toggle between FIM and next edit (#7355)
* feat: don't format when model is not mercury

* chore: bump

* fix: remove mercury-coder-nextedit

* refactor: remove refs to mercury-coder-nextedit

* feat: add util function for converting model name to enum

* refactor: add new types

* refactor: create an abstract base class for providers

* refactor: add child provider for instinct

* refactor: add provider for mercury coder

* refactor: provider factory

* refactor: use factory to create model providers based on helper.modelName

* refactor: clean up redundant logic to be more provider-friendly

* add buildPromptMetadata as an abstract method

* refactor: use handlebars and provider-specific template renderers

* refactor: use this.modelProvider instead of prompt engine

* refactor: remove redundant helper

* fix: update vitest after refactor

* feat: add test for convertNextEditModelNameToEnum

* fix: add isSecurityConcern imports

* feat: add functions to return next edit menu items and update config

* fix: get rid of callbacks

* feat: render next edit menu items

* fix: get rid of redundant completion request

* feat: update next edit status on vscode workspace config update, refactor out common logic

* feat: add continue.enableNextEdit

* feat: add aborted field to check for false positives

* fix: remove zetaDataset suffix

* feat: make sure that we are tracking completions

* feat: log aborts and move id generation to the top

* feat: all requests are tracked. when request is aborted, log as aborted with zero-value data. else, graduate it from pending completion and set aborted to false

* feat: add aborted to schema

* feat: add a toggleNextEditEnabled command

* feat: show (NE) in the status bar when next edit is enabled, add keymap

* feat: add command definitions for toggleNextEditEnabled

* refactor: handle validation in VsCodeExtension

* feat: check if model does not support next edit

* feat: use better menu item labels


--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -111,6 +111,11 @@
           "default": true,
           "markdownDescription": "Enable Continue's tab autocomplete feature. Read our walkthrough to learn about configuration and how to share feedback: [continue.dev › Walkthrough: Tab Autocomplete (beta)](https://docs.continue.dev/features/tab-autocomplete)"
         },
+        "continue.enableNextEdit": {
+          "type": "boolean",
+          "default": true,
+          "markdownDescription": "Enable Continue's next edit feature. Read our docs to learn about configuration and how to share feedback: [continue.dev › Features › Autocomplete › Next Edit (experimental)](https://docs.continue.dev/features/autocomplete/next-edit)"
+        },
         "continue.pauseTabAutocompleteOnBattery": {
           "type": "boolean",
           "default": false,
@@ -336,6 +341,10 @@
         "group": "Continue"
       },
       {
+        "command": "continue.toggleNextEditEnabled",
+        "title": "Continue: Toggle Next Edit"
+      },
+      {
         "command": "continue.nextEditWindow.hideNextEditSuggestion",
         "category": "Continue",
         "title": "Hide Next Edit Suggestion"
@@ -457,6 +466,12 @@
         "command": "continue.applyCodeFromChat",
         "mac": "alt+a",
         "key": "alt+a"
+      },
+      {
+        "command": "continue.toggleNextEditEnabled",
+        "key": "ctrl+k ctrl+n",
+        "mac": "cmd+k cmd+n",
+        "when": "editorTextFocus"
       },
       {
         "command": "continue.nextEditWindow.hideNextEditSuggestion",
