--- a/actions/general-review/action.yml
+++ b/actions/general-review/action.yml
@@ -68,7 +68,7 @@ runs:
     - name: Install Continue CLI
       if: env.SHOULD_RUN == 'true'
       shell: bash
-      run: npm install -g @continuedev/cli@1.4.25
+      run: npm install -g @continuedev/cli@latest
 
     - name: Build PR Review Prompt
       if: env.SHOULD_RUN == 'true'
@@ -157,6 +157,12 @@ runs:
         echo "=================================="
         echo ""
 
+        # Validate API key
+        if [ -z "$CONTINUE_API_KEY" ]; then
+          echo "Error: CONTINUE_API_KEY environment variable is not set"
+          exit 1
+        fi
+
         # Validate inputs to prevent command injection
         if [[ ! "$CONTINUE_ORG" =~ ^[a-zA-Z0-9_-]+$ ]]; then
           echo "Error: Invalid organization name. Must contain only alphanumeric characters, hyphens, and underscores."
@@ -168,8 +174,31 @@ runs:
           exit 1
         fi
 
-        # Run the CLI with validated config
-        cn --readonly --org "$CONTINUE_ORG" --config "$CONTINUE_CONFIG" -p "$(cat review_prompt.txt)" > code_review.md
+        # Test Continue CLI availability
+        echo "Testing Continue CLI..."
+        cn --version || { echo "Error: Continue CLI not found"; exit 1; }
+
+        # Run the CLI with validated config and error handling
+        echo "Executing Continue CLI with org: $CONTINUE_ORG, config: $CONTINUE_CONFIG"
+        if ! cn --readonly --org "$CONTINUE_ORG" --config "$CONTINUE_CONFIG" -p "$(cat review_prompt.txt)" > code_review.md 2>cli_error.log; then
+          echo "Error: Continue CLI command failed"
+          echo "CLI error log:"
+          cat cli_error.log
+          
+          # Create fallback review
+          cat > code_review.md << 'EOF'
+## Code Review Summary
+
+⚠️ AI review failed due to service initialization issues. Please check the Continue API key and configuration.
+
+### Troubleshooting
+- Verify the CONTINUE_API_KEY secret is set correctly
+- Check that the organization and config path are valid
+- Ensure the Continue service is accessible
+EOF
+        else
+          echo "Review generated successfully"
+        fi
 
     - name: Upload Review Results
       if: env.SHOULD_RUN == 'true' && always()
