--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -183,7 +183,7 @@
       {
         "command": "continue.focusEdit",
         "category": "Continue",
-        "title": "Add to Edit",
+        "title": "Edit Highlighted Code",
         "group": "Continue"
       },
       {
@@ -195,7 +195,7 @@
       {
         "command": "continue.focusContinueInputWithoutClear",
         "category": "Continue",
-        "title": "Add to Chat",
+        "title": "Add Highlighted Code to Context",
         "group": "Continue"
       },
       {
@@ -547,6 +547,31 @@
           "command": "continue.focusEdit",
           "group": "Continue",
           "when": "editorHasSelection && !editorReadonly"
+        },
+        {
+          "command": "continue.writeCommentsForCode",
+          "group": "Continue",
+          "when": "editorHasSelection && !editorReadonly"
+        },
+        {
+          "command": "continue.writeDocstringForCode",
+          "group": "Continue",
+          "when": "editorHasSelection && !editorReadonly"
+        },
+        {
+          "command": "continue.fixCode",
+          "group": "Continue",
+          "when": "editorHasSelection && !editorReadonly"
+        },
+        {
+          "command": "continue.optimizeCode",
+          "group": "Continue",
+          "when": "editorHasSelection && !editorReadonly"
+        },
+        {
+          "command": "continue.fixGrammar",
+          "group": "Continue",
+          "when": "editorHasSelection && editorLangId == 'markdown' && !editorReadonly"
         }
       ],
       "explorer/context": [
